--- a/index.css
+++ b/index.css
@@ -2,15 +2,10 @@ body {
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px; 
 }
 
-/*
 
-Style our app according to the provided design!
-
-green color -> #5f9341
-
-*/
 
 
 input {
@@ -27,4 +22,23 @@ button {
     color: white;
     padding: 10px 20px;
     border: none; 
+}
+
+#delete-btn {
+    border: 1px solid #5f9341; 
+    color: #5f9341; 
+    background: white; 
+}
+ul {
+    margin-top: 20px;
+    list-style: none;
+    padding-left: 0;
+}
+
+li {
+    margin-top: 5px;
+}
+
+li a {
+    color: #5f9341;
 }
